--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
-[package]
-name = "zephyr"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+    "zephyr",
+    "zephyr-lexer",
+]
