--- a/zephyr/Cargo.toml
+++ b/zephyr/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 zephyr-lexer = { path = "../zephyr-lexer" }
 zephyr-parser = { path = "../zephyr-parser" }
+zephyr-tycheck = { path = "../zephyr-tycheck" }
