--- a/zephyr/Cargo.toml
+++ b/zephyr/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 zephyr-lexer = { path = "../zephyr-lexer" }
 zephyr-parser = { path = "../zephyr-parser" }
+zephyr-span = { path = "../zephyr-span" }
 zephyr-tycheck = { path = "../zephyr-tycheck" }
